tests/sources/invalid/classes/super_call_arg_count.fire
// Semantic error: 'this.super(...)' with the wrong number of arguments for
// the base class's constructor.

class Base {
    x: int32;

    fn Base(x: int32) {
        this.x = x;
    }
}

class Derived from Base {
    y: int32;

    fn Derived(y: int32) {
        this.super(1, 2);  //~ ERROR FS-SEM-0010 @14
        this.y = y;
    }
}
